<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/one_screen"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/the_current_exchange_rate_of_major_currencies" />
        <item
            android:id="@+id/two_screen"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/rate_graph_currency" />
        <item
            android:id="@+id/three_screen"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/the_exchange_rate_on_the_date" />
        <item
            android:id="@+id/four_screen"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/the_list_of_cost_of_precious_metals" />
        <item
            android:id="@+id/five_screen"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/currency_calculator" />
        <item
            android:id="@+id/six_screen"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/favorite" />
        <item
            android:id="@+id/seven_screen"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/about" />
    </group>

</menu>
